salesforce-main/src/main/default/objects/Authorisation_Token__c/Authorisation_Token__c.object-meta.xml
<CustomObject>
    <label>Authorisation Token</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorisation Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>