salesforce-main/src/main/default/objects/Authorisation_Token__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>