salesforce-main/src/main/default/objects/Authorisation_Token__c/fields/Authorisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Type__c</fullName>
    <label>Authorisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPP API Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>