salesforce-main/src/main/default/objects/Authorisation_Token__c/fields/Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Expires_In__c</fullName>
    <label>Expires In</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>