salesforce-main/src/main/default/objects/Authorisation_Token__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>